--- a/app/templates/includes/components/advantages-h-section.twig
+++ b/app/templates/includes/components/advantages-h-section.twig
@@ -175,7 +175,7 @@
 						</svg>
 					</div>
 					<div class="content-img">
-						<img src="img/icon-svg/adv-icon-10.svg" alt="">
+						<img data-src="img/icon-svg/adv-icon-10.svg" alt="" uk-img>
 					</div>
 				</div>
 				<div class="item__text">
