--- a/app/templates/includes/components/composition-slider.twig
+++ b/app/templates/includes/components/composition-slider.twig
@@ -3,7 +3,7 @@
 	<div class="uk-container">
 		<div class="slider">
 			<div class="slide">
-				<img src="img/media/sliders/composition-slide.png" alt="Состав яйца">
+				<img data-lazy="img/media/sliders/composition-slide.png" alt="Состав яйца">
 				<div class="custom-slider__text">
 					<p>
 						Ниже представлены таблицы химического состава и диаграммы, из которых Вы можете узнать какая пищевая ценность, какие витамины, минералы, и сколько калорий содержится в данном продукте питания. Со временем Вам достаточно будет одного взгляда на графики, чтобы понять питательную ценность пищи.В таблицах приводятся данные %РСП.
