--- a/app/templates/includes/components/eggs-slider.twig
+++ b/app/templates/includes/components/eggs-slider.twig
@@ -167,7 +167,7 @@
 			</div>
 		</div>
 		<div class="slide">
-			<img src="img/media/eggs-big-img.png" alt="">
+			<img data-lazy="img/media/eggs-big-img.png" alt="">
 		</div>
 	</div>
 	<div class="slider__arrows">
