--- a/app/templates/news.twig
+++ b/app/templates/news.twig
@@ -15,7 +15,7 @@
 					<article>
 						<header>
 							<figure>
-								<img src="img/media/news-img-big.png" alt="">
+								<img data-src="img/media/news-img-big.png" alt="" uk-img>
 							</figure>
 							<time datetime="2020-02-29">
 								<span>29</span> 
@@ -37,7 +37,7 @@
 					<article>
 						<header>
 							<figure>
-								<img src="img/media/news-img-1.png" alt="">
+								<img data-src="img/media/news-img-1.png" alt="" uk-img>
 							</figure>
 							<time datetime="2020-02-29">
 								<span>29</span> 
@@ -57,7 +57,7 @@
 					<article>
 						<header>
 							<figure>
-								<img src="img/media/news-img-2.png" alt="">
+								<img data-src="img/media/news-img-2.png" alt="" uk-img>
 							</figure>
 							<time datetime="2020-13-29">
 								<span>13</span>
@@ -77,7 +77,7 @@
 					<article>
 						<header>
 							<figure>
-								<img src="img/media/news-img-3.png" alt="">
+								<img data-src="img/media/news-img-3.png" alt="" uk-img>
 							</figure>
 							<time datetime="2020-01-08">
 								<span>08</span>
