--- a/app/templates/company.twig
+++ b/app/templates/company.twig
@@ -38,7 +38,7 @@
 									</svg>
 								</div>
 								<div class="content-img">
-									<img src="img/media/advantage-img/advantage-img-7.svg" alt="">
+									<img data-src="img/media/advantage-img/advantage-img-7.svg" alt="" uk-img>
 								</div>
 							</div>
 							<div class="item__text uk-text-center">
@@ -58,7 +58,7 @@
 									</svg>
 								</div>
 								<div class="content-img">
-									<img src="img/media/advantage-img/advantage-img-8.svg" alt="">
+									<img data-src="img/media/advantage-img/advantage-img-8.svg" alt="" uk-img>
 								</div>
 							</div>
 							<div class="item__text uk-text-center">
@@ -78,7 +78,7 @@
 									</svg>
 								</div>
 								<div class="content-img">
-									<img src="img/media/advantage-img/advantage-img-9.svg" alt="">
+									<img data-src="img/media/advantage-img/advantage-img-9.svg" alt="" uk-img>
 								</div>
 							</div>
 							<div class="item__text uk-text-center">
@@ -103,7 +103,7 @@
 				<svg width="100%" height="100%" class="yellow-ellipse-4">
 				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
 				</svg>
-				<img src="img/media/egg.png" alt="">
+				<img data-src="img/media/egg.png" alt="" uk-img>
 			</div>
 			<div class="about-egg__text">
 				<p>
@@ -126,7 +126,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img src="img/icon-svg/adv-icon-5.svg" alt="">
+							<img data-src="img/icon-svg/adv-icon-5.svg" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
@@ -143,7 +143,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img src="img/icon-svg/adv-icon-6.svg" alt="">
+							<img data-src="img/icon-svg/adv-icon-6.svg" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
@@ -161,7 +161,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img src="img/icon-svg/adv-icon-7.svg" alt="">
+							<img data-src="img/icon-svg/adv-icon-7.svg" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
@@ -187,7 +187,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-12.png" alt="" uk-img>
+							<img data-data-src="img/media/box-type-12.png" alt="" uk-img uk-img>
 						</div>
 					</div>
 					<div class="item__text">
@@ -204,7 +204,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-15.jpg" alt="" uk-img>
+							<img data-data-src="img/media/box-type-15.jpg" alt="" uk-img uk-img>
 						</div>
 					</div>
 					<div class="item__text">
@@ -221,7 +221,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-16.jpg" alt="" uk-img>
+							<img data-data-src="img/media/box-type-16.jpg" alt="" uk-img uk-img>
 						</div>
 					</div>
 					<div class="item__text">
@@ -239,7 +239,7 @@
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Открыты новым идеям</h2>
 			<div class="offer-section__inner uk-text-center" uk-scrollspy="cls: slide-up; delay: 300">
-				<img data-src="img/media/chicken.png" alt="" uk-img>
+				<img data-data-src="img/media/chicken.png" alt="" uk-img uk-img>
 				<a href="" class="btn btn--small btn--yellow"><span>Предложить идею</span></a>
 			</div>
 		</div>
@@ -253,13 +253,13 @@
 				<div class="uk-container">
 					<div class="slider">
 						<div class="slide">
-							<img src="img/media/sliders/slider-company-1.png" alt="">
+							<img data-src="img/media/sliders/slider-company-1.png" alt="" uk-img>
 						</div>
 						<div class="slide">
-							<img src="img/media/sliders/slider-company-2.jpg" alt="">
+							<img data-src="img/media/sliders/slider-company-2.jpg" alt="" uk-img>
 						</div>
 						<div class="slide">
-							<img src="img/media/sliders/slider-company-3.jpg" alt="">
+							<img data-src="img/media/sliders/slider-company-3.jpg" alt="" uk-img>
 						</div>
 					</div>
 					<div class="slider__arrows">
@@ -286,8 +286,8 @@
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Наша продукция доступна в магазинах</h2>
 			<div class="products-section__inner">
-				<img class="ellipse-abs-1 uk-visible@l" src="img/icon-svg/large-ellipse-1.svg" alt="">
-				<img class="ellipse-abs-2 uk-visible@l" src="img/icon-svg/large-ellipse-2.svg" alt="">
+				<img class="ellipse-abs-1 uk-visible@l" data-src="img/icon-svg/large-ellipse-1.svg" alt="" uk-img>
+				<img class="ellipse-abs-2 uk-visible@l" data-src="img/icon-svg/large-ellipse-2.svg" alt="" uk-img>
 				<!-- begin custom-tabs -->
 				<div class="custom-tabs">
 
@@ -304,28 +304,28 @@
 									<div class="slide">
 										<div class="brands-grid">
 											<div class="row">
-												<img src="img/media/brands/okey.jpg" alt="">
-												<img src="img/media/brands/karusel.webp" alt="">
+												<img data-src="img/media/brands/okey.jpg" alt="" uk-img>
+												<img data-src="img/media/brands/karusel.webp" alt="" uk-img>
 											</div>
 											<div class="row">
-												<img src="img/media/brands/perekrestok.png" alt="">
-												<img src="img/media/brands/utkonos.png" alt="">
-												<img src="img/media/brands/magnit.png" alt="">
+												<img data-src="img/media/brands/perekrestok.png" alt="" uk-img>
+												<img data-src="img/media/brands/utkonos.png" alt="" uk-img>
+												<img data-src="img/media/brands/magnit.png" alt="" uk-img>
 											</div>
 											<div class="row">
-												<img src="img/media/brands/pyaterochka.png" alt="">
-												<img src="img/media/brands/azbuka.png" alt="">
-												<img src="img/media/brands/avoska.png" alt="">
-												<img src="img/media/brands/linia.jpg" alt="">
-												<img src="img/media/brands/billa.png" alt="">
+												<img data-src="img/media/brands/pyaterochka.png" alt="" uk-img>
+												<img data-src="img/media/brands/azbuka.png" alt="" uk-img>
+												<img data-src="img/media/brands/avoska.png" alt="" uk-img>
+												<img data-src="img/media/brands/linia.jpg" alt="" uk-img>
+												<img data-src="img/media/brands/billa.png" alt="" uk-img>
 											</div>
 											<div class="row">
-												<img src="img/media/brands/diksi.png" alt="">
-												<img src="img/media/brands/five-five.jpg" alt="">
-												<img src="img/media/brands/tvoi-dom.jpg" alt="">
-												<img src="img/media/brands/vern.png" alt="">
-												<img src="img/media/brands/da.jpg" alt="">
-												<img src="img/media/brands/yabloko.png" alt="">
+												<img data-src="img/media/brands/diksi.png" alt="" uk-img>
+												<img data-src="img/media/brands/five-five.jpg" alt="" uk-img>
+												<img data-src="img/media/brands/tvoi-dom.jpg" alt="" uk-img>
+												<img data-src="img/media/brands/vern.png" alt="" uk-img>
+												<img data-src="img/media/brands/da.jpg" alt="" uk-img>
+												<img data-src="img/media/brands/yabloko.png" alt="" uk-img>
 											</div>
 										</div>
 									</div>
@@ -340,28 +340,28 @@
 									<div class="slide">
 										<div class="brands-grid">
 											<div class="row">
-												<img src="img/media/brands/okey.jpg" alt="">
-												<img src="img/media/brands/karusel.png" alt="">
+												<img data-src="img/media/brands/okey.jpg" alt="" uk-img>
+												<img data-src="img/media/brands/karusel.png" alt="" uk-img>
 											</div>
 											<div class="row">
-												<img src="img/media/brands/perekrestok.png" alt="">
-												<img src="img/media/brands/utkonos.png" alt="">
-												<img src="img/media/brands/magnit.png" alt="">
+												<img data-src="img/media/brands/perekrestok.png" alt="" uk-img>
+												<img data-src="img/media/brands/utkonos.png" alt="" uk-img>
+												<img data-src="img/media/brands/magnit.png" alt="" uk-img>
 											</div>
 											<div class="row">
-												<img src="img/media/brands/pyaterochka.png" alt="">
-												<img src="img/media/brands/azbuka.png" alt="">
-												<img src="img/media/brands/avoska.png" alt="">
-												<img src="img/media/brands/linia.jpg" alt="">
-												<img src="img/media/brands/billa.png" alt="">
+												<img data-src="img/media/brands/pyaterochka.png" alt="" uk-img>
+												<img data-src="img/media/brands/azbuka.png" alt="" uk-img>
+												<img data-src="img/media/brands/avoska.png" alt="" uk-img>
+												<img data-src="img/media/brands/linia.jpg" alt="" uk-img>
+												<img data-src="img/media/brands/billa.png" alt="" uk-img>
 											</div>
 											<div class="row">
-												<img src="img/media/brands/diksi.png" alt="">
-												<img src="img/media/brands/five-five.jpg" alt="">
-												<img src="img/media/brands/tvoi-dom.jpg" alt="">
-												<img src="img/media/brands/vern.png" alt="">
-												<img src="img/media/brands/da.jpg" alt="">
-												<img src="img/media/brands/yabloko.png" alt="">
+												<img data-src="img/media/brands/diksi.png" alt="" uk-img>
+												<img data-src="img/media/brands/five-five.jpg" alt="" uk-img>
+												<img data-src="img/media/brands/tvoi-dom.jpg" alt="" uk-img>
+												<img data-src="img/media/brands/vern.png" alt="" uk-img>
+												<img data-src="img/media/brands/da.jpg" alt="" uk-img>
+												<img data-src="img/media/brands/yabloko.png" alt="" uk-img>
 											</div>
 										</div>
 									</div>
@@ -385,7 +385,7 @@
 					<article>
 						<header>
 							<figure>
-								<img src="img/media/news-img-1.png" alt="">
+								<img data-src="img/media/news-img-1.png" alt="" uk-img>
 							</figure>
 							<time datetime="2020-02-29">
 								<span>29</span> 
@@ -405,7 +405,7 @@
 					<article>
 						<header>
 							<figure>
-								<img src="img/media/news-img-2.png" alt="">
+								<img data-src="img/media/news-img-2.png" alt="" uk-img>
 							</figure>
 							<time datetime="2020-13-29">
 								<span>13</span>
@@ -425,7 +425,7 @@
 					<article>
 						<header>
 							<figure>
-								<img src="img/media/news-img-3.png" alt="">
+								<img data-src="img/media/news-img-3.png" alt="" uk-img>
 							</figure>
 							<time datetime="2020-01-08">
 								<span>08</span>
