--- a/app/templates/includes/components/brands-slider.twig
+++ b/app/templates/includes/components/brands-slider.twig
@@ -1,7 +1,7 @@
 	<!-- begin brands-slider -->
 	<div class="brands-slider preload">
-		<h2 class="uk-text-center">Купить онлайн</h2>
-		<div class="uk-container">
+		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Купить онлайн</h2>
+		<div class="uk-container" uk-scrollspy="cls:slide-up; delay: 300">
 			<div class="slider">
 				<div class="slide"><a href=""><img data-lazy="img/media/sliders/slider-brand-img-1.svg" alt=""></a></div>
 				<div class="slide"><a href=""><img data-lazy="img/media/sliders/slider-brand-img-2.svg" alt=""></a></div>
