--- a/app/templates/includes/components/main-banner.twig
+++ b/app/templates/includes/components/main-banner.twig
@@ -7,7 +7,7 @@
 					<source srcset="{{data.bgURL.desk}}" media="(min-width: 961px)">
 					<source srcset="{{data.bgURL.tablet}}" media="(min-width: 641px) and (max-width: 960px)">
 					<source srcset="{{data.bgURL.mob}}" media="(max-width: 640px)">
-					<img src="{{data.bgURL.desk}}" alt="">
+					<img src="{{data.bgURL.desk}}" alt="" loading="lazy">
 				</picture>
 			</div>
 			<div class="main-banner__text">
@@ -23,7 +23,7 @@
 			</div>
 			{% if data.flyBox.isset == true %}
 			<div class="fly-box " uk-scrollspy="cls: slide-up-abs uk-visible; delay: 500">
-				<img src="{{data.flyBox.img}}" alt="Лето">
+				<img data-src="{{data.flyBox.img}}" alt="Лето" uk-img>
 			</div>
 			{% endif %}
 		</div>
