--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -19,6 +19,7 @@
 @import "content/contacts-section";
 @import "content/about-egg";
 @import "content/tabs";
+@import "content/timer";
 @import "content/content";
 @import "footer/footer";
 
