--- a/app/templates/includes/components/eggs-slider.twig
+++ b/app/templates/includes/components/eggs-slider.twig
@@ -12,7 +12,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-1.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="2">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -27,7 +27,7 @@
 								</div>
 								<div class="circle-timer__value">2</div>
 							</div>
-							<div class="egg-section__text">Минуты</div>
+							<div class="circle-timer__text">Минуты</div>
 						</div>
 					</div>
 				</div>
@@ -37,7 +37,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-2.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="4">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -52,7 +52,7 @@
 								</div>
 								<div class="circle-timer__value">4</div>
 							</div>
-							<div class="egg-section__text">Минуты</div>
+							<div class="circle-timer__text">Минуты</div>
 						</div>
 					</div>
 				</div>
@@ -62,7 +62,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-3.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="6">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -77,7 +77,7 @@
 								</div>
 								<div class="circle-timer__value">6</div>
 							</div>
-							<div class="egg-section__text">Минут</div>
+							<div class="circle-timer__text">Минут</div>
 						</div>
 					</div>
 				</div>
@@ -87,7 +87,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-4.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="8">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -102,7 +102,7 @@
 								</div>
 								<div class="circle-timer__value">8</div>
 							</div>
-							<div class="egg-section__text">Минут</div>
+							<div class="circle-timer__text">Минут</div>
 						</div>
 					</div>
 				</div>
@@ -112,7 +112,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-5.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="10">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -127,7 +127,7 @@
 								</div>
 								<div class="circle-timer__value">10</div>
 							</div>
-							<div class="egg-section__text">Минут</div>
+							<div class="circle-timer__text">Минут</div>
 						</div>
 					</div>
 				</div>
@@ -137,7 +137,7 @@
 						<div class="egg-section__img">
 							<img src="img/media/egg-img-6.svg" alt="">
 						</div>
-						<div class="egg-section__timer">
+						<div class="circle-timer-wrapper">
 							<div class="circle-timer" data-time="15">
 								<div class="circle-timer__outer">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
@@ -152,7 +152,7 @@
 								</div>
 								<div class="circle-timer__value">15</div>
 							</div>
-							<div class="egg-section__text">Минут</div>
+							<div class="circle-timer__text">Минут</div>
 						</div>
 					</div>
 				</div>
