--- a/app/templates/includes/components/main-banner.twig
+++ b/app/templates/includes/components/main-banner.twig
@@ -23,7 +23,7 @@
 			</div>
 			{% if data.flyBox.isset == true %}
 			<div class="fly-box " uk-scrollspy="cls: slide-up-abs uk-visible; delay: 500">
-				<img data-src="{{data.flyBox.img}}" alt="Лето" uk-img>
+				<img src="{{data.flyBox.img}}" alt="Лето">
 			</div>
 			{% endif %}
 		</div>
