--- a/app/templates/includes/scripts.twig
+++ b/app/templates/includes/scripts.twig
@@ -7,4 +7,5 @@
 <script src="libs/countUp/countUp.min.js" defer></script>
 <script src="js/sliders.js" defer></script>
 <script src="js/flybox.js" defer></script>
+<script src="js/timer-app.js" defer></script>
 <script src="js/main.js" defer></script>
