--- a/app/templates/layouts/default.twig
+++ b/app/templates/layouts/default.twig
@@ -3,9 +3,9 @@
 {% include "../includes/head.twig" %}
 <body class="{{theme}}">
 {% include "../includes/header/header.twig" %}
-	
-{% block content %}{% endblock %}
-
+<main class="main-container">	
+	{% block content %}{% endblock %}
+</main>
 {% include "../includes/footer.twig" %}
 
 {% include "../includes/modals.twig" %}
