--- a/app/css/style.css
+++ b/app/css/style.css
@@ -606,6 +606,32 @@ p {
   left: 0;
 }
 
+/*______ Circle Timer ______*/
+
+.circle-timer-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -moz-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
+.circle-timer-wrapper .circle-timer__text {
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: .05px;
+}
+
 /*______ END COMPONENTS ______*/
 
 /*______ ANIMATION ______*/
@@ -2301,6 +2327,18 @@ nav.nav {
   top: 15px;
 }
 
+.advantages-section--pink .advantages-list li:nth-child(1) img {
+  top: 30px;
+}
+
+.advantages-section--pink .advantages-list li:nth-child(2) img {
+  top: 30px;
+}
+
+.advantages-section--pink .advantages-list li:nth-child(3) img {
+  top: 30px;
+}
+
 .advantage-item {
   position: relative;
   max-width: 230px;
@@ -2698,30 +2736,6 @@ nav.nav {
 .egg-section__img img {
   -webkit-filter: drop-shadow(25px 25px 15px rgba(0, 0, 0, 0.3));
   filter: drop-shadow(25px 25px 15px rgba(0, 0, 0, 0.3));
-}
-
-.egg-section__timer {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -moz-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-}
-
-.egg-section__text {
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: .05px;
 }
 
 /*______ End Egg section ______*/
@@ -3217,7 +3231,215 @@ nav.nav {
 
 /*______ End Tabs ______*/
 
+/*______ Timer ______*/
+
+.timer-app {
+  padding-top: 65px;
+}
+
+.timer-app__label {
+  margin-bottom: 36px;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+}
+
+.timer-app * + .timer-app__label {
+  margin-top: 36px;
+}
+
+.timer-app__controls {
+  margin-bottom: 20px;
+}
+
+.timer-app__countdown {
+  margin-bottom: 34px;
+  font-weight: bold;
+  text-align: center;
+  font-size: 48px;
+  line-height: 48px;
+}
+
+.timer-app__img {
+  margin: 0 80px;
+}
+
+.timer-app__img img {
+  -webkit-filter: drop-shadow(25px 25px 15px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(25px 25px 15px rgba(0, 0, 0, 0.3));
+}
+
+.timer-app__start .circle-timer-wrapper {
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.timer-app__start .btn {
+  margin: 0;
+}
+
+.timer-app .start__timer {
+  border: 2px solid #ffb422;
+  border-radius: 72px;
+  padding: 4px 110px 4px 15px;
+  margin-right: -60px;
+}
+
+.toggle {
+  text-align: center;
+}
+
+.toggle__btn {
+  position: relative;
+  padding: 3px 2px;
+  display: inline-block;
+  width: 36px;
+  height: 68px;
+  border: 2px solid #9bc045;
+  border-radius: 72px;
+  cursor: pointer;
+  /* 		&-on,
+&-off {
+	position: absolute;
+	left: 2px;
+	display: inline-block;
+	width: 28px;
+	height: 28px;
+	border: 1px solid #000;
+	z-index: 10;
+	cursor: pointer;
+}
+&-on {
+	top: 3px;
+	border-radius: 72px 72px 0 0;
+}
+&-off {
+	border-radius: 0 0 72px 72px;	
+	bottom: 3px;
+} */
+}
+
+.toggle__btn-pin {
+  position: relative;
+  width: 28px;
+  height: 28px;
+  background: -webkit-gradient(linear, left top, right top, from(#FFA722), to(#FFB422));
+  background: -moz-linear-gradient(left, #FFA722 0%, #FFB422 100%);
+  background: -o-linear-gradient(left, #FFA722 0%, #FFB422 100%);
+  background: linear-gradient(90deg, #FFA722 0%, #FFB422 100%);
+  -webkit-box-shadow: 0px 4px 4px rgba(255, 167, 34, 0.25);
+  box-shadow: 0px 4px 4px rgba(255, 167, 34, 0.25);
+  border-radius: 72px;
+  -webkit-transition: -webkit-transform .2s linear;
+  transition: -webkit-transform .2s linear;
+  -o-transition: transform .2s linear;
+  -moz-transition: transform .2s linear, -moz-transform .2s linear;
+  transition: transform .2s linear;
+  transition: transform .2s linear, -webkit-transform .2s linear, -moz-transform .2s linear;
+  z-index: 15;
+}
+
+.toggle__btn-pin.toggle {
+  -webkit-transform: translateY(100%);
+  -moz-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+}
+
+.sort-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.sort-list li {
+  margin-right: 5px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border: 2px solid #9bc045;
+  color: #5b6356;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  font-weight: bold;
+  cursor: pointer;
+  -webkit-transition: background .3s, color .3s ease;
+  -o-transition: background .3s, color .3s ease;
+  -moz-transition: background .3s, color .3s ease;
+  transition: background .3s, color .3s ease;
+  border-radius: 50%;
+}
+
+.sort-list li.active {
+  color: #ffffff;
+  background: #9bc045;
+}
+
+.sort-list li:nth-child(1) {
+  width: 53px;
+  height: 63px;
+}
+
+.sort-list li:nth-child(2) {
+  width: 48px;
+  height: 57px;
+}
+
+.sort-list li:nth-child(3) {
+  width: 43px;
+  height: 50px;
+}
+
+.sort-list li:nth-child(4) {
+  width: 37px;
+  height: 44px;
+}
+
+.sort-list li:nth-child(5) {
+  width: 32px;
+  height: 38px;
+}
+
+/*______ Timer end ______*/
+
 /*______ MAIN CONTENT ______*/
+
+main.main-container {
+  min-height: 100vh;
+}
+
+.timer-section {
+  padding-top: 70px;
+}
 
 .steps-work-section__inner.uk-scrollspy-inview li:before {
   opacity: 1;
@@ -3566,6 +3788,7 @@ nav.nav {
 
 .custom-slider__text {
   margin-top: 50px;
+  text-align: left;
 }
 
 /*______ Tab slider ______*/
@@ -4108,6 +4331,10 @@ nav.nav {
     margin-bottom: 60px;
   }
 
+  .timer-section {
+    margin-bottom: 60px;
+  }
+
   .steps-work-section {
     margin-bottom: 60px;
   }
@@ -4283,6 +4510,11 @@ nav.nav {
 
   .address-tabs .uk-switcher li {
     height: 300px;
+  }
+
+  .timer-app__countdown {
+    font-size: 60px;
+    line-height: 60px;
   }
 
   .footer__column-wrapper {
@@ -4510,6 +4742,11 @@ nav.nav {
     height: 500px;
   }
 
+  .timer-app__countdown {
+    font-size: 72px;
+    line-height: 72px;
+  }
+
   .advantages-h-section {
     margin-bottom: 90px;
   }
@@ -4531,6 +4768,10 @@ nav.nav {
   }
 
   .career-section {
+    margin-bottom: 90px;
+  }
+
+  .timer-section {
     margin-bottom: 90px;
   }
 
@@ -5207,6 +5448,11 @@ nav.nav {
     padding-top: 95px;
   }
 
+  .timer-app__countdown {
+    font-size: 96px;
+    line-height: 96px;
+  }
+
   .advantages-h-section {
     margin-bottom: 130px;
   }
@@ -5232,6 +5478,10 @@ nav.nav {
   }
 
   .career-section {
+    margin-bottom: 130px;
+  }
+
+  .timer-section {
     margin-bottom: 130px;
   }
 
