--- a/app/templates/timer.twig
+++ b/app/templates/timer.twig
@@ -9,7 +9,7 @@
 			<h2 class="title-h2 uk-text-center">Таймер для варки яиц</h2>
 
 			<div class="custom-tabs">
-				<ul class="tab-sw" uk-switcher="swiping: false">
+				<ul class="tab-sw timer-tabs" uk-switcher="swiping: false">
 					<li><a href="#">Всмятку</a></li>
 					<li><a href="#">В мешочек</a></li>
 					<li><a href="#">Вкрутую</a></li>
@@ -37,8 +37,6 @@
 									<div class="toggle">
 										<div class="timer-app__label">Из холодильника</div>
 										<div class="toggle__btn">
-											<!-- <div class="toggle__btn-on"></div>
-											<div class="toggle__btn-off"></div> -->
 											<div class="toggle__btn-pin"></div>
 										</div>
 										<div class="timer-app__label">Комнатная температура</div>
@@ -81,24 +79,22 @@
 								<div>
 									<div class="timer-app__label">Сорт яйца:</div>
 									<ul class="sort-list">
-										<li class="active" data-time='{"cold": "6:20", "room": "5:00"}'>CB</li>
-										<li data-time='{"cold": "5:40", "room": "4:30"}'>C0</li>
-										<li data-time='{"cold": "5:20", "room": "4:10"}'>C1</li>
-										<li data-time='{"cold": "4:40", "room": "3:40"}'>C2</li>
-										<li data-time='{"cold": "4:00", "room": "3:10"}'>C3</li>
+										<li class="active" data-time='{"cold": "7:30", "room": "6:10"}'>CB</li>
+										<li data-time='{"cold": "6:50", "room": "5:40"}'>C0</li>
+										<li data-time='{"cold": "6:20", "room": "5:10"}'>C1</li>
+										<li data-time='{"cold": "5:40", "room": "4:40"}'>C2</li>
+										<li data-time='{"cold": "5:00", "room": "4:10"}'>C3</li>
 									</ul>
 								</div>
 								<div>
 									<div class="timer-app__img">
-										<img src="img/media/egg-img-1.svg" alt="">
+										<img src="img/media/egg-img-2.svg" alt="">
 									</div>
 								</div>
 								<div>
 									<div class="toggle">
 										<div class="timer-app__label">Из холодильника</div>
 										<div class="toggle__btn">
-											<!-- <div class="toggle__btn-on"></div>
-											<div class="toggle__btn-off"></div> -->
 											<div class="toggle__btn-pin"></div>
 										</div>
 										<div class="timer-app__label">Комнатная температура</div>
@@ -141,24 +137,22 @@
 								<div>
 									<div class="timer-app__label">Сорт яйца:</div>
 									<ul class="sort-list">
-										<li class="active" data-time='{"cold": "6:20", "room": "5:00"}'>CB</li>
-										<li data-time='{"cold": "5:40", "room": "4:30"}'>C0</li>
-										<li data-time='{"cold": "5:20", "room": "4:10"}'>C1</li>
-										<li data-time='{"cold": "4:40", "room": "3:40"}'>C2</li>
-										<li data-time='{"cold": "4:00", "room": "3:10"}'>C3</li>
+										<li class="active" data-time='{"cold": "12:20", "room": "11:00"}'>CB</li>
+										<li data-time='{"cold": "11:30", "room": "10:20"}'>C0</li>
+										<li data-time='{"cold": "10:40", "room": "9:30"}'>C1</li>
+										<li data-time='{"cold": "9:40", "room": "8:40"}'>C2</li>
+										<li data-time='{"cold": "8:50", "room": "8:10"}'>C3</li>
 									</ul>
 								</div>
 								<div>
 									<div class="timer-app__img">
-										<img src="img/media/egg-img-1.svg" alt="">
+										<img src="img/media/egg-img-3.svg" alt="">
 									</div>
 								</div>
 								<div>
 									<div class="toggle">
 										<div class="timer-app__label">Из холодильника</div>
 										<div class="toggle__btn">
-											<!-- <div class="toggle__btn-on"></div>
-											<div class="toggle__btn-off"></div> -->
 											<div class="toggle__btn-pin"></div>
 										</div>
 										<div class="timer-app__label">Комнатная температура</div>
